--- a/scoreboard-app/index.html
+++ b/scoreboard-app/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="/custom-styles.css" />
     <title>Fighting Scoreboard</title>
   </head>
   <body>
